# mali

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
app/: pyproject.toml
app/src/mali_app/: __init__.py  _compat_gateway.py  api.py  cli.py  clock.py  curriculum_author.py  degradation.py  demo.py  fresh.py  instructor.py  item_writer.py  logging_setup.py  model_gateway.py  model_providers.py  ports.py  prompt_assets.py  qwen_gateway.py  schema.py  store.py  store_types.py  web.py
app/src/mali_app/prompts/: __init__.py  instructor_v1.md  item_writer_v1.md
app/src/mali_app/static/: student.js  styles.css
app/src/mali_app/templates/: base.html  home.html  not_found.html  student.html  teacher.html  teacher_detail.html
app/src/mali_app/templates/partials/: student_content.html
app/tests/: test_api.py  test_cli.py  test_compat_gateway.py  test_curriculum_author.py  test_instructor.py  test_item_writer.py  test_logging.py  test_model_gateway.py  test_model_providers.py  test_prompt_assets.py  test_qwen_gateway.py  test_schema.py  test_store.py  test_web.py
docs/: ai-design.md  architecture.md  trust-and-verification.md
mali/: README.md  pyproject.toml
mali/src/mali/: __init__.py  actions.py  checkpoint.py  curriculum.py  desk.py  errors.py  estimate.py  ids.py  journal.py  plans.py  policy.py  progress.py  rules.py  snapshot.py  templates.py  views.py
mali/tests/: test_curriculum.py  test_desk.py  test_estimate.py  test_ids.py  test_journal.py  test_laws.py  test_phase_three_properties.py  test_policy.py  test_progress.py  test_rules.py  test_skill.py  test_structure_properties.py  test_templates.py  test_views.py
